// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputComponent /> render() should render text input correctly 1`] = `
<div>
  <div
    class="sc-bdVaJa EXKLM"
  >
    <input
      class="sc-htpNat cOoEZT"
      rows="4"
      step="1"
      type="text"
      value="Hello World!"
    />
  </div>
</div>
`;

exports[`<InputComponent /> render() should render textarea correctly 1`] = `
<div>
  <div
    class="sc-bdVaJa EXKLM"
  >
    <textarea
      class="sc-bxivhb klegai"
      rows="10"
      step="1"
      type="text"
    >
      I am Zcash Electron Wallet
    </textarea>
  </div>
</div>
`;
